--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -453,6 +453,10 @@ gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Support aufrufen
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
+gui.menu.action.host.accel = CTRL+Alt+H
+gui.menu.action.host.desc = Hoster-Konfiguration öffnen
+gui.menu.action.host.mnem = H
+gui.menu.action.host.name = Hoster Einstellungen
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Addon (*.jdu) installieren
 gui.menu.action.install.filefilter = JD Addons
@@ -463,7 +467,7 @@ gui.menu.action.load.desc = Container öffnen (RSDF, CCF, DLC, Backups, ...)
 gui.menu.action.load.mnem = F
 gui.menu.action.load.name = Container öffnen
 gui.menu.action.optconfig.accel = CTRL+Alt+O
-gui.menu.action.optconfig.desc = Addon-manager starten
+gui.menu.action.optconfig.desc = Addon-Manager starten
 gui.menu.action.optconfig.mnem = O
 gui.menu.action.optconfig.name = Addon Einstellungen
 gui.menu.action.pause.accel = CTRL+0
