--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -557,7 +557,7 @@ gui.dialog.about.homepage = Strona domowa
 gui.dialog.about.jddevteam = Twórcy JDownloadera
 gui.dialog.about.member = Osoba
 gui.dialog.about.section = Dział
-gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_en.html
+gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_pl.html
 gui.dialog.about.title = O Programie JDownloader
 gui.dialog.about.whatisJD = Do czego służy JDownloader?
 gui.dialogs.agb_tos.agbaccepted = Akceptuję Regulamin użytkowania
