--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -454,10 +454,10 @@ gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Support aufrufen
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
-gui.menu.action.host.accel = CTRL+Alt+H
-gui.menu.action.host.desc = Hoster-Konfiguration öffnen
-gui.menu.action.host.mnem = H
-gui.menu.action.host.name = Hoster Einstellungen
+gui.menu.action.hostconfig.accel = CTRL+Alt+H
+gui.menu.action.hostconfig.desc = Hoster-Konfiguration öffnen
+gui.menu.action.hostconfig.mnem = H
+gui.menu.action.hostconfig.name = Hoster Einstellungen
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Addon (*.jdu) installieren
 gui.menu.action.install.filefilter = JD Addons
