--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -215,7 +215,7 @@ gui.config.cbo_expert = Expert Modus
 gui.config.clr.name = Reconnect via CLR
 gui.config.clr.script = CLR Script
 gui.config.download.autochunks = Delen aan bestandgrootte aanpassen.
-gui.config.download.autoresume = Herconnect mag vergaande downloads onderbreken
+gui.config.download.autoresume = Herconnect mag lopende downloads onderbreken
 gui.config.download.buffersize = Max. Buffersize[MB]
 gui.config.download.chunks = Aantal verbindingen/Bestand(Delen)
 gui.config.download.connectionlost.wait = Wachttijd na verbinding verbreking [s]
@@ -238,6 +238,7 @@ gui.config.download.proxy.port = Poort
 gui.config.download.proxy.user = Gebruikersnaam (optioneel)
 gui.config.download.retries = Max. pogingen bij tijdelijke Hosterproblemen
 gui.config.download.simultan_downloads = Maximale gelijktijdige Downloads
+gui.config.download.simultan_downloads_per_host = Maximale gelijktijdige Downloads per Host (0 = Geen Begrenzing)
 gui.config.download.socks.host = Host/IP
 gui.config.download.socks.port = Poort
 gui.config.download.startdownloadsonstartup = Start Download bij opstarten
@@ -810,6 +811,10 @@ gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Ondersteuning Oproepen
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Ondersteuning
+gui.menu.action.host.accel = CTRL+Alt+H
+gui.menu.action.host.desc = Host-Configuratie openen
+gui.menu.action.host.mnem = H
+gui.menu.action.host.name = Host Instellingen
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Add-on (*.jdu) installeren
 gui.menu.action.install.filefilter = JD Add-ons
