--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -99,7 +99,7 @@ gui.column_id = ID
 gui.column_needs = Benötigt
 gui.column_plugin = Plugin
 gui.column_status = Status
-gui.column_useplugin = Plugin benutzen
+gui.column_useplugin = verwenden
 gui.column_version = Version
 gui.component.textarea.context.copy = Kopieren
 gui.component.textarea.context.delete = Löschen
