--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -156,6 +156,11 @@ gui.config.fengshui.fritzbox.title = Fritz!Box erkannt
 gui.config.fengshui.fritzbox.upnp.checkbox = Mitteilung nicht mehr zeigen
 gui.config.fengshui.fritzbox.upnpactive = Sie haben eine Fritz!Box, der Reconnect läuft über Upnp.<br> Sie brauchen keinen Reconnecteinstellungen zu tätigen.
 gui.config.fengshui.fritzbox.upnpinactive = Bitte aktivieren sie Upnp bei ihrer Fritz!Box <br><a href="http://%s">zur Fritz!Box</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wikiartikel: Fritz!Box Upnp</a>
+gui.config.fengshui.rdautomatic = Automatisch
+gui.config.fengshui.rdmanual = Manuell
+gui.config.fengshui.rdname = Router-Erkennung
+gui.config.fengshui.settings = Einstellungen
+gui.config.fengshui.title = Feng-Shui-Konfiguration
 gui.config.general.createsubfolders = Wenn möglich Unterordner mit Paketname erstellen
 gui.config.general.downloaddirectory = Downloadverzeichnis
 gui.config.general.filelogger = Erstelle Logdatei im ./logs/ Ordner
@@ -175,11 +180,13 @@ gui.config.gui.custom_browser = Browserpfad
 gui.config.gui.custom_browser_param = Parameter %url (Pro Zeile ein Parameter)
 gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.disabletooltipps = ToolTipps der DownloadListe abschalten
+gui.config.gui.ext = Erweitert
 gui.config.gui.language = Sprache
 gui.config.gui.languagefileinfo = Momentane Sprachdatei: %s übersetzt von %s in Version %s
 gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
 gui.config.gui.look.tab = Anzeige & Bedienung
 gui.config.gui.plaf = Style (Neustart nötig)
+gui.config.gui.premiumconfigfilednum = Anzahl der anzuzeigenden Premiumaccounts
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Browser testen
@@ -187,6 +194,7 @@ gui.config.gui.testbrowser.error = Browser-Start fehlgeschlagen: %s
 gui.config.gui.testbrowser.message = JDownloader versucht nun http://jdownloader.org in dem Browser zu öffnen.
 gui.config.gui.theme = Theme
 gui.config.gui.use_custom_browser = Benutze benutzerdefinierten Browser
+gui.config.gui.usetwitter = Twitter-Meldungen laden & anzeigen
 gui.config.hjsplit.overwrite = Überschreibe existierende Dateien
 gui.config.hjsplit.remove_merged = Lösche Archiv nach dem Zusammenfügen
 gui.config.jac.column.method = Methode
@@ -236,8 +244,8 @@ gui.config.plugin.host.btn_load = Lade Plugin
 gui.config.plugin.host.desc = ACHTUNG!!! Das JD Team übernimmt keine Verantwortung für die Einhaltung der AGB`s \r\n der Hoster. Bitte lesen Sie die AGB`s aufmerksam durch und aktivieren Sie das Plugin nur,\r\nfalls Sie sich mit diesen Einverstanden erklären!\r\nDie Reihenfolge der Plugins bestimmt die Prioritäten der automatischen Mirrorauswahl\n\rBevorzugte Hoster sollten oben stehen!
 gui.config.plugin.host.name = Host Plugins
 gui.config.plugin.host.readagb = AGB
-gui.config.plugin.optional.btn_opendir = Addon Ordner öffnen
 gui.config.plugin.optional.btn_togglestatus = An/Aus
+gui.config.plugin.optional.forcedactive = Das Addon %s kann nicht abgeschaltet werden.
 gui.config.plugin.optional.link_help = http://jdownloader.org/page.php?id=122
 gui.config.plugin.optional.linktext_help = Hilfe
 gui.config.plugin.optional.statusactive = An
@@ -266,16 +274,22 @@ gui.config.unrar.ask_path = Frage nach unbekannten Passwörtern?
 gui.config.unrar.cmd = UnRAR command
 gui.config.unrar.deep_extract = Tiefes Entpacken
 gui.config.unrar.overwrite = Schon vorhandene Dateien überschreiben
-gui.config.unrar.passwordlist = Passwort Liste
 gui.config.unrar.path = Entpacken nach
 gui.config.unrar.remove_after_extract = Lösche Archiv nach erfolgreichem Entpacken?
 gui.config.unrar.remove_infofile = Lösche Infodatei nach dem Entpacken
 gui.config.unrar.subpath = Unterordner
+gui.config.unrar.subpath_minnum = Benutze Unterordner nur, wenn das Archiv mehr als x Dateien enthält
 gui.config.unrar.use_extractto = Benutze spezifischen Entpackungspfad
 gui.config.unrar.use_subpath = Benutze Unterordner
 gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.org/wiki/index.php?title=Konfig:
+gui.dialog.about.chat = Chat
+gui.dialog.about.email = Email
+gui.dialog.about.forum = Support Board
+gui.dialog.about.homepage = Homepage
+gui.dialog.about.jddevteam = JDownloader Entwickler Team
 gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_de.html
 gui.dialog.about.title = About JDownloader
+gui.dialog.about.whatisjd = Was ist jDownloader?
 gui.dialogs.agb_tos.agbaccepted = Ich bin mit den Allgemeinen Geschäftsbedingungen einverstanden
 gui.dialogs.agb_tos.description = Die Allgemeinen Geschäftsbedingungen (AGB) von %s wurden nicht gelesen und akzeptiert.
 gui.dialogs.agb_tos.readagb = %s AGB lesen
@@ -458,11 +472,6 @@ gui.menu.action.hostconfig.accel = CTRL+Alt+H
 gui.menu.action.hostconfig.desc = Hoster-Konfiguration öffnen
 gui.menu.action.hostconfig.mnem = H
 gui.menu.action.hostconfig.name = Hoster Einstellungen
-gui.menu.action.install.accel = CTRL+I
-gui.menu.action.install.desc = Addon (*.jdu) installieren
-gui.menu.action.install.filefilter = JD Addons
-gui.menu.action.install.mnem = I
-gui.menu.action.install.name = Addon installieren
 gui.menu.action.load.accel = CTRL+O
 gui.menu.action.load.desc = Container öffnen (RSDF, CCF, DLC, Backups, ...)
 gui.menu.action.load.mnem = F
@@ -537,9 +546,7 @@ gui.splash.text.initcontroller = Starte Controller
 gui.splash.text.loaddownloadqueue = Lade Downloadliste
 gui.splash.text.loadgui = Lade Benutzeroberfläche
 gui.splash.text.loadlanguage = Lade Sprachen
-gui.splash.text.loadmodules = Lade Module und Addons
 gui.splash.text.loadplugins = Lade Plugins
-gui.splash.text.update = Prüfe auf Updates
 gui.splash.text.webupdate = Prüfe auf Updates
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
@@ -735,8 +742,6 @@ main.status.inactive = aus
 main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://jdownloader.org/faq.php?lng=deutsch
 modules.packagemanager.downloadednewpackage.title2 = <p>Updates geladen.Ein Neustart ist nötig<br/> JDownloader jetzt neu starten?<hr>%s</p>
-modules.packagemanager.loadednewpackage.more = Weitere Informationen & Installationshinweise
-modules.packagemanager.loadednewpackage.title = Paket Update installiert
 modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = Bitte Methode auswählen:
 modules.reconnect.rr = Reconnect aufzeichnen
@@ -783,6 +788,7 @@ plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
+plugins.host.fastload.browsererror = Konnte den Link nicht im Browser öffnen!
 plugins.host.fastload.errors = Browser falsch konfiguriert
 plugins.host.fastload.prepare = Warte auf Linkbestätigung
 plugins.host.gigasize.freeaccount.pass = Passwort
@@ -800,10 +806,17 @@ plugins.host.premium.info.trafficleft = Traffic übrig
 plugins.host.premium.info.trafficshareleft = TrafficShare übrig
 plugins.host.premium.info.usedspace = Belegter Speicher
 plugins.host.premium.info.validuntil = Gültig bis
+plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Downloadsession abgelaufen. Bitte erneut versuchen
+plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Datei nicht gefunden
+plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Der Server ist zwischenzeitlich offline. Bitte später versuchen
+plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = Sie haben für heute heute das Limit überschritten.
+plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Download nicht möglich, da die Datei unter dem Verdacht steht illegal zu sein.
+plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB Limit erreicht.
 plugins.host.server.unavailable = Serverfehler
 plugins.host.sharebaseto.servererror = Service nicht verfügbar
 plugins.host.xup = Passwort falsch
 plugins.hoster.error.agb = AGB nicht akzeptiert
+plugins.hoster.fastload.bypassapi = API Bypass
 plugins.hoster.general.passwordprotectedinput = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
 plugins.hoster.passquestion = Link '%s' ist Passwortgeschützt. Passwort eingeben:
 plugins.hoster.premium.status_ok = Account ist OK
@@ -812,12 +825,6 @@ plugins.hoster.rapidshare.com.increasetickettime = Ticketwartezeit verlängern (
 plugins.hoster.rapidshare.com.prefferedserver = Bevorzugte Server
 plugins.hoster.rapidshare.com.prefferedserver.random = Zufällig
 plugins.hoster.rapidshare.com.preselection = Vorauswahl übernehmen
-plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Downloadsession abgelaufen. Bitte erneut versuchen
-plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Datei nicht gefunden
-plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Der Server ist zwischenzeitlich offline. Bitte später versuchen
-plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Download nicht möglich, da die Datei unter dem Verdacht steht illegal zu sein.
-plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB Limit erreicht.
-plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = Sie haben für heute heute das Limit überschritten.
 plugins.hoster.rapidshare.com.telekom = Telekom Server verwenden falls verfügbar
 plugins.hoster.uploadedto.chunks = Premium Verbindungen # (>1 verursacht höheren Traffic)
 plugins.menu.accounts = Accounts
@@ -830,6 +837,9 @@ plugins.netload.downloadpassword_question = Passwort geschützt. Passwort eingeb
 plugins.netload.downloadpassword_wrong = Passwort ist falsch.
 plugins.optional.folderwatch.checkintervall = Checkintervall [min]
 plugins.optional.folderwatch.folder = Ordner:
+plugins.optional.folderwatch.menu.check = Überprüfen
+plugins.optional.folderwatch.menu.reset = Zurückstellen
+plugins.optional.folderwatch.menu.startstop = Start/Stop
 plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.hjsplit.filefilter = HJSPLIT-Startdateien
 plugins.optional.hjsplit.menu.config = Einstellungen
@@ -880,6 +890,7 @@ plugins.optional.jdhjsplit.linkmenu.package.merge = Paket zusammenführen
 plugins.optional.jdhjsplit.name = JD-HJMerge
 plugins.optional.jdlighttray.minimizetotray = Zum Tray minimieren
 plugins.optional.jdlighttray.name = JDLightTrayIcon
+plugins.optional.jdlighttray.singleclick = Ändere Fensterstatus mit einem (!) Mausklick
 plugins.optional.jdlighttray.startminimized = Minimiert starten
 plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000˜350kb/s)
 plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Download in kb/s
@@ -888,15 +899,19 @@ plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
 plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.jdunrar.askforpassword = Passwort für %s?
 plugins.optional.jdunrar.config.advanced = Erweiterte Einstellungen
-plugins.optional.jdunrar.config.passwordlist.import = Alte Passwortliste importieren
-plugins.optional.jdunrar.config.passwordlist.import.message = Alte Passwortliste wirklich importieren?
+plugins.optional.jdunrar.config.passwordlist2 = Passwort-Liste. Pro Zeile ein Passwort. Nutzbare Passwörter: %s
 plugins.optional.jdunrar.config.passwordtab = Passwort-Liste
+plugins.optional.jdunrar.crcerrorin = Entpacken: Fehler (CRC in %s)
 plugins.optional.jdunrar.filefilter = RAR-Startdateien
+plugins.optional.jdunrar.filefilter.extractto = Zielordner
+plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.extract = Entpacken
-plugins.optional.jdunrar.linkmenu.openextract = Öffne Verzeichnis
+plugins.optional.jdunrar.linkmenu.openextract2 = Öffne Ordner (%s)
 plugins.optional.jdunrar.linkmenu.package.extract = Paket entpacken
+plugins.optional.jdunrar.linkmenu.setextract = Setze Zielordner...
 plugins.optional.jdunrar.menu.config = Einstellungen
 plugins.optional.jdunrar.menu.extract.singlefils = Archiv(e) entpacken
+plugins.optional.jdunrar.menu.pwlist = Passwort-Liste
 plugins.optional.jdunrar.menu.queue = Momentane Warteschlange
 plugins.optional.jdunrar.menu.queue.clear = Warteschlange löschen
 plugins.optional.jdunrar.menu.queue.extract = Entpacke %s
@@ -906,8 +921,11 @@ plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Entpacke %s
 plugins.optional.langfileeditor.adoptdefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptdefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
+plugins.optional.langfileeditor.changed.message = Language File hat sich geändert! Änderungen abspeichern?
+plugins.optional.langfileeditor.changed.title = Änderungen abspeichern?
 plugins.optional.langfileeditor.clearvalues = Werte löschen
 plugins.optional.langfileeditor.close = Schliessen
+plugins.optional.langfileeditor.colorizedone = Fertige Einträge einfärben
 plugins.optional.langfileeditor.colorizemissing = Fehlende Einträge einfärben
 plugins.optional.langfileeditor.colorizeold = Alte Einträge einfärben
 plugins.optional.langfileeditor.continuesearch = Weitersuchen
@@ -927,6 +945,7 @@ plugins.optional.langfileeditor.languagefilevalue = Language File Wert
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.new = Neu
 plugins.optional.langfileeditor.patternentry = <Eintrag passt auf Pattern>
+plugins.optional.langfileeditor.pickdonecolor = Farbe für fertige Einträge auswählen
 plugins.optional.langfileeditor.pickmissingcolor = Farbe für fehlende Einträge auswählen
 plugins.optional.langfileeditor.pickoldcolor = Farbe für alte Einträge auswählen
 plugins.optional.langfileeditor.reload = Neu laden
